--- a/css/style.sass
+++ b/css/style.sass
@@ -12,7 +12,7 @@
 
 $color-darkblue: #072A40
 $color-white: #F9F7F0
-$color-lightblue: #18B7BE
+$color-lightblue: #6fd3d8
 
 
 *
@@ -30,14 +30,18 @@ section
         +width(590px,100%)
 
     & svg
-        fill: $color-lightblue
+        fill: #18B7BE
         position: relative
-        top: 50px
-        right: 60px
+        top: 200px
+        right: 120px
         stroke:  white
+    
+    & path
+        cursor: pointer
 
     & path:hover
         fill: $color-darkblue
+        
 
 
     & .pin
@@ -113,13 +117,28 @@ section
 
 
 .info
-    +rel-top(relative,100px)
-    left: 50px
-    border: solid
-    background-color: $color-darkblue
+    display: none
+    +rel-top(absolute,100px)
+    left: 20px
+    background-color: $color-white
     border-radius: 5px
-    +size(300px,150px)
+    +size(250px,150px)
     & .location
-           
+        padding: 12px
+        & #city_name
+            margin: 5px auto 
+            text-align: center
+        & #wx
+            margin: 5px auto
+            color: $color-darkblue
+            font-size: 20px
+            text-align: center
+
+        & #temp
+            margin: 5px auto    
+            text-align: center
         
+        & #ci
+            margin: 5px auto
+            text-align: center
         
