小合作最終版

--- a/css/nav.sass
+++ b/css/nav.sass
@@ -26,10 +26,12 @@ nav
         max-width: 1200px
         +size(100%,60px)
         margin: auto
+        align-items: center
 
         & .title
-            font-size: 20px
+            font-size: 24px
             font-weight: bold
             color: $color-darkblue
+            
 
 
