--- a/css/nav.css
+++ b/css/nav.css
@@ -23,10 +23,13 @@ nav .box {
   width: 100%;
   height: 60px;
   margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav .box .title {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: bold;
   color: #072A40;
 }
