--- a/css/style.sass
+++ b/css/style.sass
@@ -31,8 +31,7 @@ section
 
     & svg
         fill: #18B7BE
-        position: relative
-        top: 200px
+        +rel-top(relative,180px)
         right: 120px
         stroke:  white
     
@@ -51,7 +50,7 @@ section
 
 
     & .weather_box
-        +rel-top(relative,60px)
+        +rel-top(relative,120px)
         +width(620px,100%)
 
         & .button
@@ -69,10 +68,9 @@ section
             
         & ul
             list-style-type: none
-            margin-top: 50px
+            margin-top: 80px
             padding: 0px
             display: flex
-            flex-direction: row
             flex-wrap: wrap
             
 
@@ -91,6 +89,7 @@ section
                     display: block
                     text-align: center
                     position: relative
+                    color: $color-darkblue
 
 
                 & .span2
@@ -111,6 +110,7 @@ section
             
             & .g1 
                 background-color: #d6d1d1
+                
 
             & li:hover
                 box-shadow: 3px 3px 5px 6px #cccccc
@@ -124,21 +124,33 @@ section
     border-radius: 5px
     +size(250px,150px)
     & .location
-        padding: 12px
+        padding: 5px
         & #city_name
             margin: 5px auto 
             text-align: center
+            font-size: 22px
         & #wx
             margin: 5px auto
             color: $color-darkblue
-            font-size: 20px
+            font-size: 22px
             text-align: center
 
         & #temp
             margin: 5px auto    
             text-align: center
-        
+            font-size: 22px
         & #ci
             margin: 5px auto
             text-align: center
-        
+            font-size: 22px
+
+footer
+    +size(100%,80px)
+    background-color: #9e9e9c
+    +rel-top(relative,150px)
+    justify-content: center
+    align-items: center
+    text-align: center
+    & p
+        padding-top: 25px
+        text-align: center
