--- a/css/style.sass
+++ b/css/style.sass
@@ -50,11 +50,11 @@ section
 
 
     & .weather_box
-        +rel-top(relative,120px)
+        +rel-top(relative,110px)
         +width(620px,100%)
 
         & .button
-            +rel-top(relative,30px)
+            +rel-top(relative,20px)
             letter-spacing: 5px
             padding: 5px 10px
             font-size: 25px
@@ -123,6 +123,7 @@ section
     background-color: $color-white
     border-radius: 5px
     +size(250px,150px)
+    box-shadow: 3px 3px 5px 6px #cccccc
     & .location
         padding: 5px
         & #city_name
