--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ section #app {
 section svg {
   fill: #18B7BE;
   position: relative;
-  top: 180px;
-  right: 120px;
+  top: 50px;
+  right: 150px;
   stroke: white;
 }
 
@@ -129,8 +129,7 @@ section .weather_box ul li:hover {
 }
 
 .info {
-  display: none;
-  position: absolute;
+  position: relative;
   top: 100px;
   left: 20px;
   background-color: #F9F7F0;
@@ -139,6 +138,13 @@ section .weather_box ul li:hover {
   height: 150px;
   -webkit-box-shadow: 3px 3px 5px 6px #cccccc;
           box-shadow: 3px 3px 5px 6px #cccccc;
+  z-index: 99;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  -webkit-transform-origin: right bottom;
+          transform-origin: right bottom;
 }
 
 .info .location {
